A separate section about monetization

--- a/2022-02-08-popular-writing-know-hows.org
+++ b/2022-02-08-popular-writing-know-hows.org
@@ -26,4 +26,167 @@ tags: [how-to, money, on-line]
 
 * Monetisation
 
+And now we have the option to really ramp up the monetizing side of
+things and i think monetizing is also where writer versus youtuber
+differs quite a lot the nice thing about youtube is that it has
+monetization built in you you never have to sell something if you want
+or you can like all you have to do is just continue making videos that
+are adding value to the audience and because of adsense being a thing
+just by default you'll make money on youtube you also tend to find
+that once you hit about 10 20 000 subscribers you just start getting
+brands reaching out to you being like hey skillshare wants to sponsor
+a video brilliant wants to sponsor a video this random telephone brand
+wants to sponsor a video and you start getting those inbound
+opportunities quite a lot what's it like on the writing side if you're
+sort of building an audience on twitter and then kind of sending them
+to your blog i think that when it comes to monetization sometimes with
+the internet what people do is they treat it like this totally
+different world where there's like internet rules and a lot of these
+principles that we've been talking about are actually fairly intuitive
+and one of the things that happens i don't know if you've been to a
+conference but one of the things that happens is you'll talk to
+somebody and if they're really impressive like i come to you and i say
+hey you know i have all this expertise on youtube and hey you should
+do this this and that i give you a couple ideas you're like that's a
+pretty good idea we haven't thought about that what are you are going
+to say to me hey can i hire you yeah you're going to say that to me so
+i don't even have to sell and so that's what you want to do with your
+content online you want to get to a place where just like that
+conference the potential customer doesn't feel like you're coming at
+them and you're like bye bye bye bye for me you want them to come to
+you and basically say hey i want to buy from you and even better this
+is what i want and so if you have an audience and you can cultivate an
+attitude and a skill of listening to what people want and
+understanding not just their stated motivations but their implicit
+motivations behind what they're saying and deliver a product for that
+now you have all of these customers who are knocking at your door and
+saying i want to give you money yeah and i guess it was interesting
+interesting for you the first time you tweeted out about potentially
+starting a writing course yes what was that like yes i totally forgot
+about that story good idea so what i did was i was sitting on my couch
+and i was like you know what i'm gonna teach a thousand people to
+write in 2019. Who's interested so just send out a tweet and at the
+time i don't know i had a couple thousand subscribers or a couple
+thousand followers on twitter and i got this uncanny flood of direct
+messages people from every single continent saying i would love to
+learn and so i just started talking to them i just said hey what are
+you interested in how can i help and so i was like perfect i'll do a
+consulting business and so i started trying to do that i was not a
+good consultant there's just a lot of things about that i wasn't very
+good at but what i realized was actually this was a really good time
+to start an online course business and so i started doing that and so
+i turned right a passage into a product and i started monetizing and
+over time i've raised the price and i've done a much better job of
+listening to what people want and then building an experience for them
+but what's really important is we got two multi-million dollars in
+revenue and i didn't spend a single cent on paid advertising not one
+cent because i had the audience yeah that's great i think it was
+similar for us when we first launched our youtuber academy i just
+tweeted something about it i didn't even mention it on youtube for the
+first two cohorts i just tweeted it and we had an avalanche of people
+being like oh my god this sounds great i want to sign up where do i
+sign up we had a few people joking oh just take my money now lol that
+kind of thing and i think that's what happens when you've just spent
+so long jabbing ie providing so much value completely for free over
+such a long period of time that when you do want to sell a product and
+you kind of a little bit tapped in into what the audience wants it
+just basically sells itself one of the things i would add here and
+this goes back to that conference metaphor is when do you know that
+it's the time and i would say people will start asking you yeah and
+you don't want to be too pushy i was at a hotel last week and this guy
+comes up to me and he just starts talking to me and within 20 seconds
+he's given me his business card what do i think i think this guy has
+no value to provide he is not going to be a trustworthy person and so
+i just left the business card on the table i'm not going to contact
+that guy but if we had had a conversation and he had said hey you know
+this these are my thoughts on this and that i said hey that's pretty
+interesting then i would have said do you have a business card and so
+you want to get to a place where you're providing enough value to
+people that they're asking you and once you're getting enough people
+asking that's when you know it's time to monetize and there's this
+really good book uh the minimalist entrepreneur by our mutual friend
+lavinia i think um where he kind of talks about this method of
+monetizing as being like about building an audience first and then
+building a product that will suit that audience whereas normally the
+way we think about it intuitively is oh let's build the thing first
+and then i will find people to buy my thing whereas if you start off
+by just providing loads of value doing it on public platforms like
+twitter and youtube transitioning them to your mailing list doing a
+bit of strategy just really focusing on being as helpful as you
+possibly can for free to thousands hundreds of thousands millions of
+people on the internet then when you create a product you will know
+exactly what they want they will tell you what they want they will be
+asking you for the product and then you can make it and then the
+audience is already primed to buy from you if that's what you want to
+go i'm trying to sort of summarize all this and so i would say it's
+this get started by sharing ideas and as you do you will learn about
+whatever it is that you're writing about position yourself as an
+expert and then because you position yourself as an expert when people
+come to your stuff ask them to sign up for your email list ask them to
+keep reading your stuff and as they do certain people who see you as
+an expert will say hey i would like to learn this this this and that
+from you once they say that start writing about those ideas eventually
+they'll say i'd also like to pay you for your help and that's when you
+begin to have a product but one of the other things that you see
+sometimes is as you work on something you just see a big hole in the
+market so the carlson brothers when they were founding stripe they saw
+wait this is weird it's really hard to accept payments sahil who
+started gumroad felt the same sort of thing he's like this business
+doesn't exist and he was his own first customer and so as you create
+you're going to see opportunities that emerge and once that happens
+you can start monetizing but what's so great about having an audience
+is at the beginning you don't need to go out and raise funding you
+have way less risk because you have people who already trust you and
+they're going to give you the benefit of the doubt if and when your
+first product isn't quite up to par so i guess like now both you and i
+are sitting here kind of with fairly profitable multi-million dollar
+businesses where we teach stuff where we've got teams of people like
+five years ago there's no way in hell you and i would have imagined
+that we're we're going to be sitting here and talking about this right
+now but it was really a case of just you know like 99.99 of all the
+stuff that we do is completely free we don't charge a penny for it
+it's just that we focus on providing as much value to the audience as
+much as we can adding adding a healthy dose of strategizing and
+improving and stuff over time such that when we get to the point of
+being able to monetize we then get to this point of having having
+these successful businesses and one of the things that i would
+emphasize is you were up at nights editing videos you insisted on
+publishing regularly i used to insist on writing for 90 minutes every
+single day and for something like five years i publish something
+basically every single day whether that was a tweet or an article i've
+been doing newsletters and i haven't missed the newsletter in a couple
+years now that isn't to say that this is impossible because you know
+we've we've been able to do it but it requires a certain amount of
+discipline and consistency but what i will say with that is having
+multi-million dollar businesses that we can run from anywhere in the
+world and having the freedom to explore ideas for a living is the gift
+that makes that hard work worth doing yeah i think that's fantastic
+stuff and i think like often often people ask me like how how did you
+sustain the motivation and the momentum to keep on pushing out those
+videos even when you didn't have an audience and even when you weren't
+making any money and the thing i always come back to is that it just
+it was fun like when you find something that you're doing for the
+intrinsic joy of doing it and you find ways to make it fun like trying
+to get a little bit better trying to incorporate these editing tricks
+trying to be like oh how can i speak on camera a bit differently next
+time what elements of peter mckinnon or matt deville can incorporate
+into my videos that's all the stuff that makes it super fun and so
+after work when i'd be sitting on my computer editing and my housemate
+would be like why do you work all the time to me it would just seem a
+little bit of an unusual question because when you just enjoy that
+thing so much it really genuinely doesn't feel like work yes there are
+aspects of it that do and sometimes you do have to grind through the
+boredom of it but for the most part the more you can enjoy the thing
+for its own sake rather than once i become a millionaire then i'll
+have fun the more you can enjoy intrinsically for the joy of the
+activity itself the more the easier it is to sustain this habit over
+time and to enjoy the journey along the way so i think that's a good
+place to end this david thank you so much for joining uh if you guys
+liked this you should definitely check out our two and a half hour
+long podcast episode on my deep dive channel that'll be linked over
+there where we explore all of this stuff in so much more detail thank
+you so much for watching hit the subscribe button check out david
+links in the video description and i'll see in the next video bye
+
+
 * Notes                                                      :noexport:notes:
