--- a/2022-02-08-popular-writing-know-hows.org
+++ b/2022-02-08-popular-writing-know-hows.org
@@ -16,7 +16,534 @@ tags: [how-to, money, on-line]
 
 * Intro
 
+hey friends welcome back to the channel today i'm joined by my very
+good friend david perrell david how are you doing that's me i'm doing
+well um thanks luther thanks for coming on the channel so basically
+what we're gonna do is that david and i have both built uh
+multi-million dollar businesses off the back of building an audience
+which we started completely from scratch but you've done it in the
+realm of writing through twitter newsletters and blog and youtube for
+you and i've done it through youtube through the domain of video and
+now you're dabbling in youtube and i'm dabbing and writing but really
+try to take your territory man exactly so you're the writing guy i'm
+the youtube guy but we've kind of done that same path and we started
+around about possibly around the same time 2017 2016 yeah around that
+time complete beginners we did not have an audience beforehand and so
+in this video we kind of want to break down the five stages of going
+from absolutely nothing to then having a big profitable business on
+the other end so we're going to be talking about starting out and kind
+of pros and cons of writing versus youtube and how easy it is to start
+love writing versus youtube we're going to talk about how to get
+better at the craft writing in youtube we're going to talk about how
+to grow the audience and how that is you know tips on each platform
+and how that's different between writing and youtube we're going to
+talk about transitioning an audience from a public platform like
+twitter and youtube onto private platforms like an email list and blog
+and finally we're going to talk about monetizing and basically what
+we're trying to do is give you that road map which both david and i
+have sort of followed in parallel uh just across these different
+platforms so if you've been thinking of building an audience or if
+you're further along that path hopefully you'll get some value out of
+this video and us sharing the tips that have worked for us because to
+be honest a lot of these tips even if you're a youtuber it's really
+helpful to know what a writer does to grow and similarly if you're a
+writer it might be useful to know what a youtuber does to grow their
+audience how does that sound let's do it fantastic 
+
 * Starting out
+
+so let's start with starting out for the first time now i suspect that
+starting out as a writer is probably easier than starting out as a
+youtuber i think so because the thing about writing is it doesn't cost
+anything so if like when i did youtube i'd get cameras and mics and
+lights and all this sort of stuff but writing you can just go to a
+coffee shop and just get to work exactly and so like uh what sort of
+tips would you have for someone who's just starting out like what
+should they be doing as like their first few steps if they're like
+cool i want to build an audience online and i'm going to do it through
+the writing path look i'll tell you what i did so i say write every
+single day and set like a 60 minute timer and make sure that you show
+up every single day it's like working out go to the gym and actually
+when i started working out what i did was i said i'm gonna go for 30
+minutes every single day and i did for many years and so i tried to do
+the same thing with writing and if you can do that it fits in with
+your schedule do that and just show up and write consistently but one
+of the things i would say is give yourself a forcing function to
+publish regularly to because that's then going to improve the quality
+of what you actually produce and how often would you suggest a
+beginner publishers stuff start with once a month i think once a week
+is ideal but once a month is good and commit to that i know it's hard
+i know it can be scary but once a month just follow that path amazing
+and what sort of platforms should a complete beginner be trying to
+build their audience on well i think it depends on what you're doing i
+think if you're interested in ideas which i think is where we can
+focus i say focus on twitter twitter is the internet's home for ideas
+and it's a place where you can easily get distribution and one of the
+things you can do is you can have little screenshot essays i do this
+all the time yeah and so what i'll do is i'll write something that's
+like two three four hundred words and i'll take a screenshot draw a
+little purple line around it and then i'll just share it on twitter
+and just watch how people respond to it and then if something does
+well then i just sort of follow that idea i'm like ah that idea
+interests people i'm gonna take a mental note of that and then maybe
+write about it more in the future amazing and how do you figure out
+what you first want to write about like where would you start let's
+say you're a beginner you've got all these different things you're
+interested in like oh have all these interests like how do i know what
+to write about well i'd be interested to know what you say about that
+for youtube but i think one of the mistakes that a lot of people make
+is they don't start because they're not 100 certain about what it is
+that they want to write about and the thing that i would do is often
+maybe you've been working in an industry for a while you've been
+passionate about something for many years if that's the case you know
+what to write about but also i didn't know what to write about when i
+started not at all and so whenever i talk to reddit passage students
+one of the things i'll say is just start writing have good
+conversations around your writing see what's beginning to resonate and
+then double down on the intersection of what resonates with you and
+what's fun to write about and piques your curiosity and then also what
+resonates with other people how about for youtube how's that yeah yeah
+so i think for youtube starting out is a lot harder than starting out
+with writing and that's generally why whenever someone asks me oh how
+do you build an audience how should i get started as a complete
+beginner what i say is actually you should start by writing and that
+you know i actually started writing a year and a half two years before
+i first started on youtube and i think if i hadn't started my blog and
+started writing articles on that initially i just published maybe like
+once a month ish roughly probably less frequently than that because i
+was a bit of a waste man but if i hadn't started the blog i wouldn't
+have started the youtube channel because starting the blog was what
+gave me that push that i needed to be okay with the idea of putting
+myself out there online but what do i do if like i don't know i want
+to make youtube videos i want to be a youtuber i love youtube and i
+want to start doing that but i just don't know what knowledge i have
+that is worth hearing and i just don't know what i want to make videos
+about yeah so this is the question we get all the time in our in our
+youtuber academy there's there's no easy answer it's a bunch of it
+depends but one framework that i like which we talked about in our
+podcast is this idea of architect versus archaeologist yeah um so for
+example an architect is someone who plans everything out and before
+they before they before the builder lays a single brick the architect
+has got all of the plans and they know exactly what they're doing on
+the other hand you have the archaeologists and the archaeologist is
+someone who like you know they'll think okay that area sounds
+promising and they're gonna dig they're gonna do the work they're
+gonna make the videos they're gonna keep on digging and most of those
+things are going to lead to dead ends but occasionally they might
+stumble across something that where they're like oh this is
+interesting i'm going to dig here and once they dig they zoom in more
+and they keep on digging and i think for most people starting out on
+youtube being an archaeologist is the way to go once you are already
+good at making videos then you can be an architect you can do all the
+market research you can research your niche you can do all of that
+business type stuff as an architect but for most people my advice is
+just start making videos about whatever interests you and then once
+you get to the point where you know how to make a good video at that
+point you can start thinking more about the strategy and about the
+nation about like the market and i think this is a good transition
+into what it's gonna take to get better at the craft i think when
+you're starting a craft the most important thing is to do the craft
+and anything that is taking you away from actually doing the craft is
+gonna be sub-optimal even if that's what all the gurus and all the
+experts say is like the thing to do yeah no exactly i think you have a
+nice phrase which is uh imitate then innovate yes um there's another
+one sort of get going and then and then get good yeah it's all you
+know the thing that i always preach is that uh quantity is more
+important than quality at the start and once you get good at that
+point you switch to quality rather than quantity totally so there's
+that parable of the pottery class where you know this pottery teacher
+split that class into into two segments and uh one half the class was
+told to make a single pot in 30 days so just one pot and the other
+half of the class was told to make a pot every day for 30 days so they
+make they made 30 pots and at the end there was a bunch of judges and
+they judged the quality of the pots and every single one of the top
+pots came from the quantity group rather than the quality group and i
+think getting better at a thing often it is just about putting in the
+reps while also having a little bit of a mind on like marginal
+improvement over time it's not like the biggest mistake i see from our
+youtube academy students is this sense of like perfectionism that oh
+this video needs to be good and if it's not good i'm not going to
+publish it whereas the way we think of it like the formula that we use
+is like okay at level one you're just focused on making one video at a
+time just do everything that it can you can you can't optimize for
+that at level two do whatever you can to optimize for making one video
+a week and you know lower the friction do batch filming do whatever it
+takes just one video a week that's all you need to do once you're
+comfortable with one video a week at that point you think about making
+one good video a week so until you're level three you don't even need
+to worry about the quality at all you just need to focus on the
+quantity focus on the consistency focusing on making that making that
+content because i think the thing with youtube and this is probably
+true of writing as well like there are a lot of skills like for
+youtube you need to know how to public speak how to write how to do
+thumbnail how to do titles how to edit how to speak on a camera how to
+be confident how to be you know engaging all that kind of stuff and
+you just don't learn that like these are not skills we have by default
+they're skills that it takes tons and tons and tons of reps of just
+making bad videos to get good and once you're good at that point you
+can start thinking strategically and start like you know optimizing
+all the little things yeah so the other thing that you can do to get
+better at the craft is pay attention to how people compliment you and
+this will happen so when people talk about your writing they'll end up
+saying things about your work we're like huh i didn't recognize that
+and listen to the things where they'll give you a comment you're like
+yeah that's actually the writer that i would want to be and begin to
+cultivate that and then as you do that that skill will become honed
+and refined and will become a bigger part of your style because i
+think that that's what we're trying to get to you know i would say
+style is your personality on the page and we all know that we have a
+given personality and that takes a long time to refine but you want to
+do the same thing but do it intentionally with writing and you do that
+by paying attention to compliments that you get where people are
+saying this is why i like your work and double down on that yeah it
+was exactly the same thing on on youtube so for me i started out
+fairly fairly niche started out giving advice to medical students uh
+who were applying applying to medical school and then i would look at
+the i would look at the comments oh this was really helpful i liked
+how you did that thing i was like oh cool maybe i'll do more of that
+thing oh this was really helpful i'd love to see a video where you
+talk about how you studied for exams while doing youtube oh
+interesting oh this is really helpful i saw that you were using an
+ipad you know how do you take notes on your ipad i was like cool i'll
+make a video about how to take notes on my ipad so i think for me was
+like recognizing the compliments but also recognizing what content
+ideas the audience was giving to me so that i knew that videos i was
+making were actually helping people one of the frameworks that we use
+in terms of getting feedback and one of the things that you can do is
+ask people in your life for feedback early on my mom edited a lot of
+my work but then later on it was different readers who even when i
+only had a couple hundred subscribers they would reach out and i would
+say hey can you help me edit i would say can you tell me five things
+and i follow the acronym cribs c for confusing r for repeated i for
+insightful b for boring and s for surprising and among those five
+things i could figure out hey this is what i should do more of this is
+what i want to do less of because whenever somebody tells you hey this
+is confusing you just rewrite it if something says this is repeated
+well then delete it if somebody says this is insightful double down on
+it something is boring delete it and if something is surprising sort
+of build up to that create suspense for that moment sort of like a
+horror movie or something and so i like that cribs framework confusing
+repeated insightful boring and surprising because anybody who edits
+your work can instantly understand what that means nice yeah i i think
+that's one of the things that writing really has going for it that you
+can actually get really good feedback by sending us sending a sending
+a piece sending an article to other people to get feedback on that
+specific thing the issue with youtube is that because like it's it's
+very hard to get specific feedback on a video and it's very hard for
+that specific feedback to be useful so generally the way i think of
+improving on videos is don't worry too much about this video think
+about the next one and so you publish the video you can like depending
+on what your numbers are you can look at the analytics you can see the
+comments you can generally get a feel for what bits of the video
+resonated what bits of the video didn't resonate and you can use that
+to try and improve slightly for the next time but at the same time i
+think there is a danger in you know one thing i tried to do in the
+early days was to be like every video is going to be better than the
+last and that is completely unsustainable you can just get you caught
+in a state of paralysis with that and so like one thing that i i had
+is that i never had goals for my channel other than i just want to
+make one or two videos every week and i'm gonna do this for a few
+years and i'm gonna see what happens and hope for the best and slowly
+try and improve over time how did you think about cultivating
+inspirations like were there different channels that you were
+following or were you more inspired by people outside of the world of
+youtube what did you do there yeah so on youtube so i actually spent a
+bunch of time on twitter and on youtube so uh and and reading books
+and listening to podcasts so uh essentially anytime something would
+resonate with me or i was learning something interesting i would be
+like oh okay can i make a video where i document this and i really
+like garyvee's concept of document don't create what does he mean by
+that so what he means by that is that just document the things you're
+doing already document the things you're already learning don't think
+about trying to create new content because like even now 90 of the
+videos on my channel which is doing reasonably well are documenting
+the process of something this video we're doing now is both of us
+documenting and just sharing advice on a thing that we've already done
+it's not like we're trying to do comedy skits or like at least at
+least for me on youtube i'm i'm almost never trying to create
+something completely original do you know the idea of sell your
+sawdust oh yeah it's sort of like that you know it's like what are the
+things you're already doing and then how do you take that and turn it
+into something useful one of the things that i've done in my writing
+is i try to be very sensitive to when i'm reading a writer whose work
+i really admire i just stop and i say okay in addition to these ideas
+being interesting what can i take from the way that the writing is
+constructed and why is this moving me yeah and one of the things i do
+is i have a framework that we teach and write a passage it's called
+pop writing and so what pop writing is is it's personal observational
+and playful those are the three pillars what personal writing is is
+it's ideas that touch the heartstrings or talk about that writer they
+sort of reveal something about themselves observational writing is
+something that is making good observations in the world and playful
+writing is something that has some some personality it's got some
+flavor it's got some fun and if you can have writing that is personal
+observational and playful if it definitely if you have two or three
+but if you have all three that tends to be very good writing and so
+what i'll do is i am good at observational writing i'm not as good at
+personal and playful and so i'll read different writers and try to
+identify what allows them to do well and then i'll try to bring that
+in to my writing and just in the act of thinking about it i improve i
+don't actually need to like do drills or anything like that because
+that's not my style yeah yeah i think that personal observational
+playful really applies to youtube as well i think the two things that
+i'm good at personally are personal and playful so kind of opposite to
+you whereas i'm pretty bad at observational but i find that in videos
+where i'm saying something like sharing a personal anecdote or kind of
+condensing a lot of personal experience into a single video like i had
+a video go viral last year how i type really fast 156 words you do
+type really fast i was actually just watching that it's crazy um but
+that's a skill that i've been honing for the last 14 years of my life
+and so all of that personal experience condensed into one video is
+going to make it more personal like hey here are the things that work
+for me maybe they'll work for you and playful as well it kind of
+depends on your vibe there's a nice phrase that we i like called uh
+which is that your vibe attracts your tribe and so on this channel i i
+like to be a little bit light-hearted we our whole setup is like light
+mode rather than dark mode i try and have a bit of banter here and
+there use colorful things colorful keyboards like all these things
+just add a little touch of kind of fun into it whereas other youtubers
+their brand might be a little bit more serious a little bit less fun
+so it kind of depends on what sort of brand you want to cultivate and
+how you can then improve your videos to and recognize that that that's
+a subjective thing but that's that's kind of where you're trying to
+get to the other thing to talk about is the idea of like unfair
+advantages and i think this is really important if you're if you're on
+youtube as well like yes there is a sense of you know just publish
+videos see what happens but there's also an a big element of
+strategizing like what are the things that i'm good at what are the
+things i'm interested in what are the things the market or the
+audience wants and potentially what are the things i could potentially
+monetize later and if you can find something that's at the
+intersection of i'm personally interested in this i'm good at talking
+about this or good at the thing and the audience seems to want it that
+is when you get that true sort of creator audience fit and then things
+really start to take off whereas for me i felt like you know i think
+how did that show up in your life like when you were identifying those
+unfair advantages and how can we learn to identify ours yeah so i
+think i think the thing with unfair advantages is that there's a miles
+framework that some friends of mine who wrote a book called the unfair
+advantage which is just over there uh they use they use the miles
+framework so that is money intelligence and insight location and luck
+uh expertise and skills skills or status or something like that that's
+like one framework for it for me it was like it was more of an
+intuitive thing of recognizing that okay i've got an unfair advantage
+of the cambridge university medical student brand name and i have the
+unfair advantage that i had a business that was making money so i
+could invest in camera gear early on and so those two things i was
+like okay how can i take advantage of the brand name that i've got and
+how can i kind of really ramp up the production value so this seems
+really high quality compared to other student vlogs led me down into
+the thing of okay let me give advice to medical students where the
+brand name is helpful if i was i don't know teaching guitar the fact
+that i'm a cambridge university medical student is completely
+irrelevant no one cares but if i'm helping kids get into med school it
+suddenly becomes a useful thing one of the things that i have is my
+unfair advantage is i paid attention a lot to like what comes
+naturally to me but it's hard for other people you know naval ravicon
+has a great line he says do what looks like work to others but feels
+like play to you and for me i love ideas i have a ton of energy and i
+get really excited about things and so having observations about the
+world and going out doing things and then wanting to talk about those
+things all i needed to do was just go one tiny step more and just put
+it onto the page and then we were talking earlier about compliments
+compliments lead to competence and so what ends up happening is once
+you get those compliments you get some momentum and you double down on
+those things and then eventually you become competent at whatever it
+is that you're doing and so i really just paid attention to like what
+are the super david things and no matter how weird they are let me
+find a way to double down on that and then use it to get better at my
+craft sweet so i guess like overall if we're summarizing this idea of
+how do you get better at your thing i think part of it is you just
+kind of get better at doing the thing itself so for example getting
+feedback on your writing doing more of it doing more videos trying to
+incorporate more editing flair trying to think about the branding but
+then there's also an element of strategy and that brings us nicely
+onto part number three which is how do you actually grow your audience
+that's the big question yeah so what's it like for a writer there's a
+lot of ways to think about this but i do think you want to ride a wave
+and having a wave can make growing an audience a lot easier for you so
+i think that there's a couple ways to think about a wave and i would
+say what you could do is you could do a wave of ideas you could do a
+wave of people or you could do a wave of a trend and so a wave and a
+of an idea is you can summarize that idea and so often that happens
+through through a book and you can summarize whatever that principle
+is that's the first thing and there's so many options there then you
+have a wave of people one of the things that i looked for was who are
+some big names who will promote my work and then how do i write things
+that they'll actually be interested in so a huge influence on my life
+was an economist named tyler cowan and tyler has shared a lot of my
+work on his blog marginal revolution which is the world's biggest
+economics blog and because he was sharing my work what ended up
+happening was i got a lot of reach and distribution and then the third
+option is you can ride a trend so i think that i've rode the trend of
+writing online then whatever it is there are certain technological
+trends ways that society is changing and so if you can focus on an
+idea a person or a trend you can use that to then grow your audience
+nice that's a really good framework i really like that i just made it
+out fantastic it's so good incredible um yeah like the way i think of
+it on on youtube is like what once you have gotten good at making a
+video you can actually do all those things as well so you can chase
+trends that's how a lot of people do it you know reaction to tv shows
+when squid game was coming up loads of channels blew up off the back
+of that when like among us was a thing actually that's really good
+remember mr beast when he published i know it's mr beast i know that's
+kind of unrelatable but he's really good at this and he made that
+video about squid games which was like the fastest distributing
+youtube video ever that i think is very indicative of how the internet
+works and how to build an audience yeah so i think like trends is one
+way of doing it on youtube the other way of doing it is actually
+looking at channels that are similar to yours seeing what videos have
+done disproportionately well for them like what are their top most
+viewed videos and is there a way that i can kind of do a similar video
+if i'm doing that if i'm stealing an idea from someone else i will
+make a point to not watch their video i literally just take the idea
+so for example i remember there was one video called how i take notes
+on my ipad pro as an engineering student that had like a million views
+and the channel had like 20 000 subscribers so i was like damn okay
+this video has done like 50 times greater than their subscriber count
+if my numbers are right therefore what if i do a video called how i
+take notes on my ipad as a medical student and that video has ended up
+was the first one that really went viral for us and is now on like
+five million views or something and that video is the gift that keeps
+on giving so i think there are intelligent ways to do market research
+and to think about strategy and some people are like oh but like
+originality but like really you know there's a great book by austin
+cleon called steel like an artist which is where he basically makes
+the point that nothing out there is original everything is just a
+remix of something else and so when you worry too much about trying to
+be original you end up actually not being particularly useful whereas
+if you focus on being useful like what can i add to this what can i do
+in my own way that's useful to other people at that point originality
+doesn't really matter and there's a quote that i really like i can't
+remember who's from but it's it's like there there are no unique
+messages there are only unique messengers and so you don't need to
+worry too much like the the nice thing about youtube is that there's
+no way for me to copy another person's video i will always by default
+be doing it my own way because i am different to them and i think just
+leaning into that and recognizing that just because something else
+exists out there that that does not mean you can't make that video one
+of the things that i always try to do is just add something so i think
+that trying to begin with this deal like an artist framework is a
+great place to start it's not a place where i try to end so what i do
+is i follow a framework called imitate then innovate and what i'll
+often do is i'll take an existing idea and i'll try to make sense of
+it i'll try to say what's missing from this and what's missing ends up
+being the originality that i bring and so the most viral article i've
+ever written was called peter thiel's religion and peter thiel is a
+very famous investor and i saw how everybody knew how his ideas were
+influenced by this philosopher named renee gerard but what happened
+was i saw that his ideas were very influenced by christianity and that
+was sort of what i added but i started off that piece by just trying
+to summarize his ideas with rene gerard and by writing new things were
+revealed to me that then i could add something to the picture and so i
+do always strive to end with originality but i never insist on
+starting with originality yeah that's really good i think i think also
+so the way that i do it on youtube is if i'm ever like summarizing a
+book for example it will never just be a summary of the book it will
+also it'll always be like a personal reflection on the summary of the
+book right so even if i'm just summarizing a book where you know every
+every section of the video i can say and here's how i personally
+applied this idea in my life i think that automatically adds something
+to it in in a way where it's it's documenting not creating you know
+what we could actually apply the pop framework to this that we were
+talking about earlier personal observational and playful where you can
+add a personal element which is what you've done there i'm going to
+summarize a book but do it in a personal way that's how i can add my
+originality i can have an observational way of looking at things which
+is i'm looking deeper into whatever that thing is and i'm finding
+something within that thing that other people aren't seeing and then
+there's an element of playfulness and i think this is what a lot of
+youtubers do really well is they'll take serious ideas and then
+they'll add an element of playfulness and fun and then they don't need
+to create anything new they're just adding a new flair or a new
+personality to whatever that is and so you go personal observational
+playful and then you can get your originality nice uh one thing i
+wanna talk about was the idea of distribution now i think here here's
+where like i think writing versus youtube differs a bit very different
+here youtube has distribution built in like there is the youtube
+algorithm which is designed to surface the right video to the right
+person at the right time and if you're making a video that is
+genuinely good and resonating with people by by which basically i mean
+people are clicking on it and people are watching it for a long time
+then the algorithm is just by default going to promote it whereas how
+does distribution work in the world of writers i know a lot of people
+are like oh i've started a blog but like how is anyone going to find
+it like you know that kind of vibe so i have a framework called the
+public to private bridge where you want to find your audience on
+public platforms but then build your audience on private platforms so
+what's the difference so public platforms are places like social media
+and what you have is they're free and they have these algorithms where
+good things are really promoted they spread like wildfire right like a
+viral video on youtube can be seen millions of times but the problem
+with these public platforms is you don't own your audience and they're
+mediated by an algorithm so if you then want to reach your audience it
+can be hard and so what you want to do is you want to transfer people
+you want to find them on the public platforms but then get them to
+engage with your private platforms and a private platform could be
+something like email what i love about email is if i want to reach
+someone on my email list there's no algorithm that's mediating that i
+know that that's going to land in their inbox and there's a line in
+business that says the money is in the list and it's because when
+somebody signs up for your email list now you can reach out to them
+with no issues and so i always find people for me it's been on twitter
+or on youtube increasingly but then i'm saying hey sign up for my
+email list so that i can reach them the public to private bridge yeah
+and i think that's a place where kind of both of us started out
+parallel you starting on twitter and blogging me starting on youtube
+and we converged on this idea of getting people to sign up to your
+mailing list like these days most of the revenue in our business goes
+through our courses and actually most of the sales for our courses
+don't come from the youtube channel i even i i barely promote the
+course at all on youtube when it comes out instead i promote the
+course to the mailing list where people have opted in to get
+information about the course and that is automatically a far better
+group to market and sell a course to or whatever the product is
+because a they've opted into it and by by virtue of the fact they've
+opted into it they are probably the sort of person you're trying to
+market this course to i tend not to talk about my kind of 3 000 course
+on youtube very much because you know i know that it's completely
+inaccessible for the block of my audience but for the people who've
+chosen to sign up the mailing list makes perfect sense one of the
+things i would add is whenever you make it difficult for people to
+hear about your mailing list or to sign up for your mailing list or
+you don't do a good job of explaining why they should sign up for your
+mailing list that's like adding a toll to the bridge and the more
+expensive the toll the fewer people are going to drive on the bridge
+so what i do i talk about my mailing list but then i don't just say
+hey sign up for my mailing list i say i will give you a free 50-day
+writing series that i have spent hours working on that is all my
+knowledge of writing distilled and compressed and you if you just
+enter your email get that for free and now my pitch is so much more
+compelling than hey i have a mailing list i send out an email once a
+week sign up that's not compelling at all uh yeah and you can sign up
+to that by clicking the link link down below and actually i stole that
+idea from you and so we have like what the the email course yeah the
+50 day thing next except i was in seven days because we didn't have
+time to do for 50 days um and that's like how we get it's like a seven
+day part-time youtube or a crash course email series and it's free
+it's got a lot of a lot of value in it it took hours and hours and
+hours to write but what we're hoping for is that people sign up to the
+mailing list to get that email course and then each of those emails
+gets so gives them so much value that they're like oh okay this is
+interesting so that when we launch our course people are more are more
+primed to trust us with a topic because we've already delivered value
+up front and i think that speaks to a broader kind of meta principle
+throughout all of this kind of stuff where wherever you are on the
+journey from like complete beginner to multi-million dollar business
+and beyond like really the rule of the game is to just deliver as much
+value as possible and garyvee has a framework called jab jab jab right
+hook where it's like a jab is where you're giving someone really
+valuable content completely for free and a right hook is when you
+charge the money or you try and sell them something and what garyvee
+often says is that he wishes he could have called his book like 20
+times before the right hook because that is like the ideal ratio of
+free content to paid okay so at this point we've started out either as
+a writer or as a youtuber we've done a lot of practice put in a bunch
+of reps to get good at the craft then we've done some strategizing
+we've done some like giving loads and loads and loads of value to
+people to the point that we've now built an audience on these public
+platforms like twitter and youtube we have then gone a step further
+and taken that audience to our private platform like our email list.
 
 * Getting better
 
