--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -16,7 +16,7 @@ tags: [data gathering, data elaboration, notetaking]
 
 * Preamble
 
-Without shadow of doubt the managing your task is a /meta-task/ that
+Without a shadow of doubt the managing your task is a /meta-task/ that
 vitally important to accomplish your job in a productive and effective
 manner. I mean do it with sincere joy, playfully focusing on each
 particular task and, of cause, with minimum silly interruptions. Yes,
