--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -41,12 +41,22 @@ Separate set of bookmarks for each task
 
 ** Task management
 
+Naturally it might be implemented by a single ~master~ ToDo list for
+general tasks, and a bundle of ~slave~ ToDo lists, connected and
+disconnected optionally, depending on current job properties.
+
 ** Data gathering
 
 ** Data elaboration
 
 ** Meta-analysys
 
+~C-h l~ history of Emacs' commands 
+
 * Notes                                                      :noexport:notes:
  - GitHub.io with Jekyll data representation might be ideal for
    meta-analysys already collected data
+
+
+
+
