--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -44,6 +44,23 @@ nearby future. Yes, this approach has a ton of caveats:
 - Precision;
 - Distortion;
 - etc.
+
+
+* A synthetic way of note-taking
+
+Not so far /a literacy/ spreaded across a globe and nowadays in
+particular every _Homo_ can read and write. So, literally it might be
+implemented by a single ~master~ ToDo list for general tasks, and a
+bundle of ~slave~ ToDo lists, connected and disconnected optionally,
+depending on current job properties.
+
+ + Task management;
+ + Data gathering;
+ + Data elaboration
+ + Meta-analysys
+
+* Emacs' standpoint
+
 ** Toolset
 
 Separate EWW window for each task  -- does its history also splitted?
