--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -18,6 +18,18 @@ tags: [overview]
 
 *  Intro
 
+All right, so in this video, I'm gonna summarise some of the insights
+from this book, The Millionaire Fastlane.  I thought that this was
+gonna be really bad when a friend recommended it to me.  And then this
+friend said, "No, trust me. Ignore the click-baity title, The
+Millionaire Fastlane, and read the book because it's genuinely really
+good.  And it is genuinely really good.  This is probably the single
+best book I have ever read on how to build a business that makes
+money.  And so in this episode of Book Club, which is the series where
+we distil and discuss highlights from some of my favourite books,
+we're gonna be breaking down five key lessons from the book.  And
+also, the five commandments of building a business that MJ DeMarco
+talks about.  How to get rich quick.
 *  Avoid the slow lane
 
 *  Work the process
