--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -16,7 +16,7 @@ tags: [overview]
 #+CATEGORY: Money
 #+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
-* TODO Intro
+* ACTIVE Intro
 SCHEDULED: <2022-02-15 Tue>
 
 All right, so in this video, I'm gonna summarise some of the insights
@@ -32,7 +32,7 @@ we're gonna be breaking down five key lessons from the book.  And
 also, the five commandments of building a business that MJ DeMarco
 talks about.  How to get rich quick.
 
-* TODO Avoid the slow lane
+* ACTIVE Avoid the slow lane
 SCHEDULED: <2022-02-15 Tue>
 
 Now, the first important lesson in the book is that we want to avoid
@@ -47,63 +47,78 @@ that it is easy to get rich, that is a scam and you should avoid it.
 And one of the interesting things that he talks about in the book is
 the idea that there are three paths through life.  There's path number
 one, which is the sidewalk.  This path to the slow lane, and path
-number three, the fast lane.  The sidewalk is basically where people
-who are living paycheck to paycheck live, people who don't have a lot
-of money.  I'm not gonna talk about it too much.  It's a bit
-disparaging.  It's very American style.  Sort of very brash way of
-describing it that he does.  Like, you know, "If you're living on the
-sidewalk, then you're living paycheck to paycheck."  And like, "Your
-life is screwed because you believe that the government is screwing
-you over," all that kind of stuff.  We're not gonna talk about that
-too much.  There are a few bits like that in the book where you have
-to kind of read or listen to it with a little pinch of salt.  But I
-think the second path through life, the slow lane, is interesting.
-Because if you follow the slow lane, you can still get rich.  And the
-slow lane is generally, if you're watching this, probably your
-parents' generation stood by the slow lane.  The idea of the slow lane
-is that, you know, you go to school.  You get good grades. You get a
-decent job.  You work your way up the ladder in your job, whatever
-your job is.  You save some percentage of your paycheck.  You put that
-into investments, maybe in the stock market, if you're particularly
-rogue.  But probably, you know, you should invest in property and real
-estate because property is a good investment.  And over time,
-eventually, you will have enough of a nest egg such that when you
-retire, then you will be rich.  And you can enjoy your retirement at
-the age of 65 when you have osteoarthritis in both of your knees.
-That is, basically, the idea of the slow lane.  And he talks about how
-there are three traps that we can fall into, which will end up keeping
-us on the slow lane.  The first trap is that life in the slow lane
-looks like it's pretty safe.  You can think that, "Okay, once I get
-this job, then my life is pretty safe and I'm pretty sorted."  But if
-the pandemic has taught us anything, and if, you know, the way the
-world is at the moment, A: it's actually not that safe.  You actually
-could lose your job.  If you're, fine, if you're a doctor or something
-like that, where you're unlikely to lose your job, that's still pretty
-safe.  But even so, what he says is that there are a tonne of other
-unexpected events that happen in life.  Like if there's a market crash
-like there was in 2008, or if you have kids, Or if you get divorced.
-Or if you have a health problem and you live in a stupid country, like
-America, where that could potentially bankrupt you.  There are all of
-these fairly common, unexpected events that can happen in life that
-make life in the slow lane not actually as safe an option as it
-might've been for our parents' generation.  The second trap that Slow
-Laners can fall into is this idea that if we build our intrinsic
-market value enough, then we will get rich.  So, for example, these
-are the people who think, "Okay, I've worked my job for two years.
-Now I'm gonna go and get an MBA and pay like however many tens of
-thousands of dollars to get an MBA.  Because then once I have that
-degree, then I will be worth more to my future employer."  But the
-problem with that style of thinking is that it's not really the fast
-lane approach to building wealth.  It is still, ultimately, trading
-your time for money.  And yes, fine.  If you get you that extra
-degree, if you get that extra qualification, your time will be worth
-more.  A little bit more, maybe even significantly more, but
+number three, the fast lane.
+
+The sidewalk is basically where people who are living paycheck to
+paycheck live, people who don't have a lot of money.  I'm not gonna
+talk about it too much.  It's a bit disparaging.
+
+It's very American style.  Sort of very brash way of describing it
+that he does.  Like, you know, "If you're living on the sidewalk, then
+you're living paycheck to paycheck."  And like, "Your life is screwed
+because you believe that the government is screwing you over," all
+that kind of stuff.  We're not gonna talk about that too much.  There
+are a few bits like that in the book where you have to kind of read or
+listen to it with a little pinch of salt.
+
+But I think the second path through life, the slow lane, is
+interesting.  Because if you follow the slow lane, you can still get
+rich.  And the slow lane is generally, if you're watching this,
+probably your parents' generation stood by the slow lane.  The idea of
+the slow lane is that, you know, you go to school.  You get good
+grades. You get a decent job.  You work your way up the ladder in your
+job, whatever your job is.  You save some percentage of your paycheck.
+You put that into investments, maybe in the stock market, if you're
+particularly rogue.
+
+But probably, you know, you should invest in property and real estate
+because property is a good investment.  And over time, eventually, you
+will have enough of a nest egg such that when you retire, then you
+will be rich.  And you can enjoy your retirement at the age of 65 when
+you have osteoarthritis in both of your knees.  That is, basically,
+the idea of the slow lane.
+
+And he talks about how there are three traps that we can fall into,
+which will end up keeping us on the slow lane.  The first trap is that
+life in the slow lane looks like it's pretty safe.  You can think
+that, "Okay, once I get this job, then my life is pretty safe and I'm
+pretty sorted."  But if the pandemic has taught us anything, and if,
+you know, the way the world is at the moment, A: it's actually not
+that safe.  You actually could lose your job.
+
+If you're, fine, if you're a doctor or something like that, where
+you're unlikely to lose your job, that's still pretty safe.  But even
+so, what he says is that there are a tonne of other unexpected events
+that happen in life.  Like if there's a market crash like there was in
+2008, or if you have kids, Or if you get divorced.  Or if you have a
+health problem and you live in a stupid country, like America, where
+that could potentially bankrupt you.
+
+There are all of these fairly common, unexpected events that can
+happen in life that make life in the slow lane not actually as safe an
+option as it might've been for our parents' generation.
+
+The second trap that Slow Laners can fall into is this idea that if we
+build our intrinsic market value enough, then we will get rich.  So,
+for example, these are the people who think, "Okay, I've worked my job
+for two years.  Now I'm gonna go and get an MBA and pay like however
+many tens of thousands of dollars to get an MBA.  Because then once I
+have that degree, then I will be worth more to my future employer."
+
+But the problem with that style of thinking is that it's not really
+the fast lane approach to building wealth.  It is still, ultimately,
+trading your time for money.  And yes, fine.  If you get you that
+extra degree, if you get that extra qualification, your time will be
+worth more.  A little bit more, maybe even significantly more, but
 ultimately, you're still just trading your time for money.  And that
-is a very slow-laney way to approach building wealth.  And the third
-trap that Slow Laners can fall into is just not even believing it's
-possible to get rich quick, unless you're super lucky or super
-talented.  But, as MJ says, even if you can't get rich easy, which is
-not a thing, you can get rich relatively quick, if quick is 10 years.
+is a very slow-laney way to approach building wealth.
+
+And the third trap that Slow Laners can fall into is just not even
+believing it's possible to get rich quick, unless you're super lucky
+or super talented.  But, as MJ says, even if you can't get rich easy,
+which is not a thing, you can get rich relatively quick, if quick is
+10 years.
+
 10 years is the definition of quick, which to be honest, it's pretty
 quick.  But a lot of us, when we think "get rich quick", we're
 thinking a few weeks.  That is not a thing.  What he's arguing for is
