New set of integrational properties for each article

--- a/2022-01-20-the-second-brain.org
+++ b/2022-01-20-the-second-brain.org
@@ -9,10 +9,12 @@ tags: [become, yourself, notetaking]
 ---
 #+END_EXPORT
 
-#+STARTUP: showall
-#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+#+STARTUP: showall indent
+#+OPTIONS: tags:nil num:nil todo:nil pri:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
+#+CATEGORY: NoteTaking
+#+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 This is the [[https://www.youtube.com/watch?v=OP3dA2GcAh8&ab_channel=AliAbdaal][source]]
 
