--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -10,9 +10,11 @@ tags: [become, yourself, thought, contemplation]
 #+END_EXPORT
 
 #+STARTUP: showall indent
-#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
-#+TOC: headlines 3
+#+OPTIONS: tags:nil num:nil todo:nil pri:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+#+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
+#+CATEGORY: CogBiases
+#+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 * Prelude
 
