--- a/2022-02-03-intelligence-amplification.org
+++ b/2022-02-03-intelligence-amplification.org
@@ -11,9 +11,11 @@ augmentation]
 #+END_EXPORT
 
 #+STARTUP: showall indent
-#+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+#+OPTIONS: tags:nil num:nil todo:nil pri:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
+#+CATEGORY: IntAmp
+#+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 * Definition
 
