Further agenda evolution

--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -125,7 +125,7 @@ thinking a few weeks.  That is not a thing.  What he's arguing for is
 a process that will take probably around 10 years to get rich quick.
 And that is actually quick, in his book.
 
-* TODO Work the process
+* ACTIVE Work the process
 SCHEDULED: <2022-02-16 Wed>
 
 And that brings us on to lesson number two, which is to work the
