--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -127,8 +127,8 @@ disconnected optionally, depending on current job properties.
 
 
 
-** RAW [#B] Fleeting Notes
-SCHEDULED: <2022-02-16 Wed>
+** RAW [#C] Fleeting Notes elaboration
+SCHEDULED: <2022-02-21 Mon>
 :PROPERTIES:
 :CATEGORY: Old Notes
 :END:
@@ -209,5 +209,5 @@ How to grow your audience
 Monetisation
 
 ** RAW Internal and external
-SCHEDULED: <2022-02-16 Wed>
+SCHEDULED: <2022-02-25 Fri>
 [[info:org#Link Format][links for Zettelkasten]]
